--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <html>
-	<link href="../BULB/Css/Style.css" rel="stylesheet">
+	<link href="../Css/Style.css" rel="stylesheet">
 	<head>
-	  <link rel="icon" type="image/png" href="../BULB/Imagens/icon.ico">
+	  <link rel="icon" type="image/png" href="../Imagens/icon.ico">
 	  <meta name="keywords" content="palavra1, frase um, palavra2, frase dois">
 	</head>
 	<div  id="header-wrap" class="fixed-header">
