--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-	<link href="../Css/Style.css" rel="stylesheet">
+	<link href="Css/Style.css" rel="stylesheet">
 	<head>
 	  <link rel="icon" type="image/png" href="../Imagens/icon.ico">
 	  <meta name="keywords" content="palavra1, frase um, palavra2, frase dois">
