--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 	<div  id="header-wrap" class="fixed-header">
 		<!--<header>Teste</header>-->
 		<div class="Headerinterno">
-			<img  src="../BULB/Imagens/Logo1.png">
+			<img  src="../Imagens/Logo1.png">
 			<!-- <ul class="list">
-			      <li><a href="../BULB/Index.html">Home</a></li>
-			      <li><a href="../BULB/Por que contratar.html">Beneficios do Rpa</a></li>
-			      <li><a href="../BULB/Quem Somos.html">Quem somos?</a></li>
-			      <li><a href="../BULB/Contatos.html">Contate-Nos</a></li>
+			      <li><a href="../Index.html">Home</a></li>
+			      <li><a href="../Por que contratar.html">Beneficios do Rpa</a></li>
+			      <li><a href="../Quem Somos.html">Quem somos?</a></li>
+			      <li><a href="../Contatos.html">Contate-Nos</a></li>
 			    </ul> -->
 			<!--<h1>BULB</h1>-->
 			<!--<nav class="nav-horizontal">
@@ -25,10 +25,10 @@
 		<!--<header>Teste</header>-->
 			<div class="Headerinterno">
 				<ul class="list" style="font-family: 'Verdana';">
-				      <li><a href="../BULB/Index.html"><b>Home</b></a></li>
-				      <li><a href="../BULB/Por que contratar.html"><b>Sobre o RPA<b></a></li>
-				      <li><a href="../BULB/Quem Somos.html"><b>Quem Somos?</b></a></li>
-				      <li><a href="../BULB/Contatos.html"><b>Contate-Nos</b></a></li>
+				      <li><a href="../Index.html"><b>Home</b></a></li>
+				      <li><a href="../Por que contratar.html"><b>Sobre o RPA<b></a></li>
+				      <li><a href="../Quem Somos.html"><b>Quem Somos?</b></a></li>
+				      <li><a href="../Contatos.html"><b>Contate-Nos</b></a></li>
 				    </ul>
 				
 			</div>	
@@ -45,9 +45,9 @@
 		<div id="header-wrap" class="Barra_Suavização">
 			
 		</div>
-		<div id="Conteudo_zero" style="background-image: url('../BULB/Imagens/Vemelho1.png');background-position: center;background-repeat: no-repeat;background-size: cover;">
+		<div id="Conteudo_zero" style="background-image: url('../Imagens/Vemelho1.png');background-position: center;background-repeat: no-repeat;background-size: cover;">
 			<div id="Logo_Index">
-				<img src="../BULB/Imagens/Indexlogo.png" style="  margin-left: -5%;">
+				<img src="../Imagens/Indexlogo.png" style="  margin-left: -5%;">
 			</div>
 			<h1 style="margin-top:-1.5%; font-family: 'Georgia';">Automação & Tecnologia</h1>
 			<p class="index" style="font-family: 'Lucida Sans Unicode';margin-top: -0.5%;"><b>Com a Bulb, qualquer pessoa ou organização pode fazer parte do universo das automações. Fazendo uso de diversas tecnologias de forma integrada, proporcionamos melhorias de real valor agregado no dia-a-dia de nossos parceiros. <u>O avanço do amanhã começa hoje!</u></b></p>
@@ -56,7 +56,7 @@
 				
 			</div>
 			<div id="Separador_Dir">
-				<a class="botao" href="../BULB/Quem Somos.html" style="margin-top: 58%; margin-left: 60%; font-family: 'Verdana'; font-size: x-large; padding-bottom: 10%;"><b>QUEM SOMOS</b></a>
+				<a class="botao" href="../Quem Somos.html" style="margin-top: 58%; margin-left: 60%; font-family: 'Verdana'; font-size: x-large; padding-bottom: 10%;"><b>QUEM SOMOS</b></a>
 			</div>
 		</div>
 
@@ -64,7 +64,7 @@
 			<div id="Conteudo_par_Servicos1">
 				<div id="Conteudo_Par_Titulo_Serviços">
 					<div id="Titulo_Servicos">
-						<img src="../BULB/Imagens/prontos.png">
+						<img src="../Imagens/prontos.png">
 					</div>
 					<p style="margin-top: -5%;font-family: 'Lucida Sans Unicode'; text-align: justify;  color: #4F4F4F; "><b style="font-family: 'Verdana';text-align: center;margin-left: 20%;color: red;">ROBÔS PRONTOS</b> <br>	A Bulb trabalha com o fornecimento de robôs pré desenvolvidos, para casos onde as demandas são comuns ao mercado e/ou a outros parceiros internos. Nestes casos, o levantamento das características e o desenvolvimento dos robôs fica mais ágil e prático.</p>
 				</div>
@@ -72,7 +72,7 @@
 			<div id="Conteudo_par_Servicos2">
 				<div id="Conteudo_par_Titulo_Serviços">
 					<div id="Titulo_Servicos">
-						<img src="../BULB/Imagens/inovacao.png">
+						<img src="../Imagens/inovacao.png">
 					</div>
 					<p style="font-family: 'Lucida Sans Unicode'; text-align: justify; margin-top: -22.5%; color: #4F4F4F;"><b style="font-family: 'Verdana';text-align: center; margin-left: 10%;color: red;">ROBÔS SOB DEMANDA</b><br>	Os robôs sob demandas são para casos específicos de cada parceiro, onde um mapeamento detalhado é necessário antes dos desenvolvimentos para entendimento do fluxo de ponta a ponta.</p>
 				</div>
@@ -80,7 +80,7 @@
 			<div id="Conteudo_par_Servicos3">
 				<div id="Conteudo_par_Titulo_Serviços">
 					<div id="Titulo_Servicos">
-						<img src="../BULB/Imagens/raas.png">
+						<img src="../Imagens/raas.png">
 					</div>
 
 					<p style="margin-top: -22%;font-family: 'Lucida Sans Unicode'; text-align: justify; color: #4F4F4F;"><b style="font-family: 'Verdana';text-align: center;margin-left: 40%;color: red;">RAAS</b> <br>	Raas são robôs desenvolvidos para serem executados no ambiente da Bulb, são uma opção para parceiros que não possuem ambiente de execução ou preferem optar por não executar os fluxos em máquinas internas.</p>
@@ -89,7 +89,7 @@
 			<div id="Conteudo_par_Servicos4">
 				<div id="Conteudo_par_Titulo_Serviços">
 					<div id="Titulo_Servicos">
-						<img src="../BULB/Imagens/ferr1.png">
+						<img src="../Imagens/ferr1.png">
 					</div>
 
 					<p style="margin-top: 7.5%;font-family: 'Lucida Sans Unicode'; text-align: justify; color: #4F4F4F;"><b style="margin-left: 35%;font-family: 'Verdana';text-align: center;color: red;">SUPORTE</b> <br>	A Bulb é uma das únicas empresas do mercado que presta suporte para robôs de diversos tipos de ferramentas de RPA, caso você tenha um parque de robôs ja desenvolvido e precise apenas de manutenções e/ou acompanhamento contínuo, também pode contar com a gente!.</p>
@@ -102,21 +102,21 @@
 			
 			<div id="Separador_Esq">
 				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
-					<div id="Conteudo_par_Vantagens_Titulo"><div id="Conteudo_par_Vantagens_Icone"><img src="../BULB/Imagens/Agilidade.png" style="margin-top:10%;"></div><b style="font-size: 100%;font-family: 'Verdana';color: red;">AGILIDADE: </b>
+					<div id="Conteudo_par_Vantagens_Titulo"><div id="Conteudo_par_Vantagens_Icone"><img src="../Imagens/Agilidade.png" style="margin-top:10%;"></div><b style="font-size: 100%;font-family: 'Verdana';color: red;">AGILIDADE: </b>
                    Os robôs são desenvolvidos baseados em cálculos de economia de tempo por unidade de processamento, contúdo, as demandas automatizadas tornam-se mais ágeis do que as manuais</p></div>
 				</div>
 				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
-                   <div id="Conteudo_par_Vantagens_Titulo"><div id="Conteudo_par_Vantagens_Icone"><img src="../BULB/Imagens/Dinamismo.png" style="margin-top:10%;"></div><b style="font-size: 100%;font-family: 'Verdana';color: red;">DINAMISMO: </b>
+                   <div id="Conteudo_par_Vantagens_Titulo"><div id="Conteudo_par_Vantagens_Icone"><img src="../Imagens/Dinamismo.png" style="margin-top:10%;"></div><b style="font-size: 100%;font-family: 'Verdana';color: red;">DINAMISMO: </b>
                    O dinamismo de uma automação passa pela capacidade do robô de realizar mais de uma tarefa em um fluxo cíclico, onde demandas em cadeia podem ser mapeadas para gerar uma saída a partir de várias entradas</p>
                    	</div>
 				</div>
 				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
-                   <div id="Conteudo_par_Vantagens_Titulo"><div id="Conteudo_par_Vantagens_Icone"><img src="../BULB/Imagens/Massa.png" style="margin-top:10%;"></div><b style="font-size: 100%;font-family: 'Verdana';color: red;">PRODUÇÃO: </b>
+                   <div id="Conteudo_par_Vantagens_Titulo"><div id="Conteudo_par_Vantagens_Icone"><img src="../Imagens/Massa.png" style="margin-top:10%;"></div><b style="font-size: 100%;font-family: 'Verdana';color: red;">PRODUÇÃO: </b>
                    Com o uso de fluxos automatizados, o expediente de trabalho não tem fim... Os robôs podem ser executados para processamento de demandas massivas, liberando os funcionários humanos para outras tarefas que agregam real valor intelectual</p>
                    	</div>
 				</div>
 				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
-                   <div id="Conteudo_par_Vantagens_Titulo"><div id="Conteudo_par_Vantagens_Icone"><img src="../BULB/Imagens/Precisao.png"></div><b style="font-size: 100%;font-family: 'Verdana';color: red;">PRECISÃO: </b>
+                   <div id="Conteudo_par_Vantagens_Titulo"><div id="Conteudo_par_Vantagens_Icone"><img src="../Imagens/Precisao.png"></div><b style="font-size: 100%;font-family: 'Verdana';color: red;">PRECISÃO: </b>
                    Com um levantamento preciso das necessidades do fluxo, os robôs executam tarefas precisas durante toda a produção. Diferentemente de um humano, os robôs não sofrem com cansaso, estresse e outros fatores do tipo, podendo gerar do começo ao fim da execução, resultados no mesmo padrão.</p>
                    	</div>
 				</div>
@@ -127,7 +127,7 @@
                <h2 style="font-family:'Lucida Sans Unicode'; text-align: justify;"> Utilize uma tecnologia acessível a todos para iniciar o avanço técnológico da sua organização.
                 A automação começou no passado, faz parte do presente e é fundamental para o futuro!
                 Descubra como podemos contribuir com o seu progresso:</h2>
-                 <a class="botao" href="../BULB/Contatos.html"><b>CONTATE-NOS!!!</b></a>
+                 <a class="botao" href="../Contatos.html"><b>CONTATE-NOS!!!</b></a>
 
 			</div>
 		</div>
@@ -135,41 +135,41 @@
 			<div id="Conteudo_par_Servicos1">
 				<div id="Conteudo_Par_Titulo_Segmentos_Suerior">
 					<h2 style="font-family: 'Verdana';">Logística</h2>
-					<img src="../BULB/Imagens/Transporte_y_Logistica1.png" style="margin-bottom: 5%;">
+					<img src="../Imagens/Transporte_y_Logistica1.png" style="margin-bottom: 5%;">
 				</div>
 				<div id="Conteudo_par_Titulo_Segmentos_inferior">
 					<h2  style="font-family: 'Verdana';">Industria</h2>
-					<img src="../BULB/Imagens/industria1.png" style="margin-bottom: 5%;">
+					<img src="../Imagens/industria1.png" style="margin-bottom: 5%;">
 				</div>
 			</div>
 			<div id="Conteudo_par_Servicos2">
 				<div id="Conteudo_par_Titulo_Segmentos_Suerior">
 					<h2 style="font-family: 'Verdana';">Educação</h2>
-					<img src="../BULB/Imagens/educacao.png" style="margin-bottom: 5%;">
+					<img src="../Imagens/educacao.png" style="margin-bottom: 5%;">
 				</div>
 				<div id="Conteudo_par_Titulo_Segmentos_inferior" >
 					<h2 style="font-family: 'Verdana';">Agronegócio</h2>
-					<img src="../BULB/Imagens/agronecocio1.png" style="margin-bottom: 5%;">
+					<img src="../Imagens/agronecocio1.png" style="margin-bottom: 5%;">
 				</div>
 			</div>
 			<div id="Conteudo_par_Servicos3">
 				<div id="Conteudo_par_Titulo_Segmentos_Suerior">
 					<h2 style="font-family: 'Verdana';">Finanças</h2>
-					<img src="../BULB/Imagens/Financeiro1.png" style="margin-bottom: 5%;">
+					<img src="../Imagens/Financeiro1.png" style="margin-bottom: 5%;">
 				</div>
 				<div id="Conteudo_par_Titulo_Segmentos_inferior">
 					<h2 style="font-family: 'Verdana';">Saúde</h2>
-					<img src="../BULB/Imagens/Saude1.png" style="margin-bottom: 5%;">
+					<img src="../Imagens/Saude1.png" style="margin-bottom: 5%;">
 				</div>
 			</div>
 			<div id="Conteudo_par_Servicos4">
 				<div id="Conteudo_par_Titulo_Segmentos_Suerior">
 					<h2 style="font-family: 'Verdana';">Jurídico</h2>
-					<img src="../BULB/Imagens/Juridico1.png" style="margin-bottom: 5%;">
+					<img src="../Imagens/Juridico1.png" style="margin-bottom: 5%;">
 				</div>
 				<div id="Conteudo_par_Titulo_Segmentos_inferior">
 					<h2 style="font-family: 'Verdana'; font-size: 140%;">Tecnologia & Pesquisa</h2>
-					<img src="../BULB/Imagens/Tec__Pesqu1.png" style="margin-bottom: 5%;">
+					<img src="../Imagens/Tec__Pesqu1.png" style="margin-bottom: 5%;">
 				</div>
 			</div>
 		</div>
