--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<img  src="../Imagens/Logo1.png">
 			<!-- <ul class="list">
 			      <li><a href="../Index.html">Home</a></li>
-			      <li><a href="../Por que contratar.html">Beneficios do Rpa</a></li>
+			      <li><a href="Por que contratar.html">Beneficios do Rpa</a></li>
 			      <li><a href="../Quem Somos.html">Quem somos?</a></li>
 			      <li><a href="../Contatos.html">Contate-Nos</a></li>
 			    </ul> -->
