--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="Headerinterno">
 				<ul class="list" style="font-family: 'Verdana';">
 				      <li><a href="../Index.html"><b>Home</b></a></li>
-				      <li><a href="../Por que contratar.html"><b>Sobre o RPA<b></a></li>
+				      <li><a href="Por que contratar.html"><b>Sobre o RPA<b></a></li>
 				      <li><a href="../Quem Somos.html"><b>Quem Somos?</b></a></li>
 				      <li><a href="../Contatos.html"><b>Contate-Nos</b></a></li>
 				    </ul>
