--- a/Contatos.html
+++ b/Contatos.html
@@ -1,15 +1,15 @@
 <html>
-	<link href="../BULB/Css/Style.css" rel="stylesheet">
-	<link rel="shortcut icon" type="image/png" href="../BULB/Imagens/icon.ico">
+	<link href="Css/Style.css" rel="stylesheet">
+	<link rel="shortcut icon" type="image/png" href="Imagens/icon.ico">
 	<div  id="header-wrap" class="fixed-header">
 		<!--<header>Teste</header>-->
 		<div class="Headerinterno">
-			<img  src="../BULB/Imagens/Logo1.png">
+			<img  src="Imagens/Logo1.png">
 			<!-- <ul class="list">
-			      <li><a href="../BULB/Index.html">Home</a></li>
-			      <li><a href="../BULB/Por que contratar.html">Beneficios do Rpa</a></li>
-			      <li><a href="../BULB/Quem Somos.html">Quem somos?</a></li>
-			      <li><a href="../BULB/Contatos.html">Contate-Nos</a></li>
+			      <li><a href="Index.html">Home</a></li>
+			      <li><a href="Por que contratar.html">Beneficios do Rpa</a></li>
+			      <li><a href="Quem Somos.html">Quem somos?</a></li>
+			      <li><a href="Contatos.html">Contate-Nos</a></li>
 			    </ul> -->
 			<!--<h1>BULB</h1>-->
 			<!--<nav class="nav-horizontal">
@@ -30,10 +30,10 @@
 		<!--<header>Teste</header>-->
 		<div class="Headerinterno">
 			<ul class="list">
-			      <li><a href="../BULB/Index.html">Home</a></li>
-			      <li><a href="../BULB/Por que contratar.html">Sobre o RPA</a></li>
-			      <li><a href="../BULB/Quem Somos.html">Quem Somos?</a></li>
-			      <li><a href="../BULB/Contatos.html">Contate-Nos</a></li>
+			      <li><a href="Index.html">Home</a></li>
+			      <li><a href="Por que contratar.html">Sobre o RPA</a></li>
+			      <li><a href="Quem Somos.html">Quem Somos?</a></li>
+			      <li><a href="Contatos.html">Contate-Nos</a></li>
 			    </ul>
 		</div>	
 	</div>
