--- a/Index.html
+++ b/Index.html
@@ -103,7 +103,7 @@
 			<div id="Separador_Esq">
 				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
 					<div id="Conteudo_par_Vantagens_Titulo"><div id="Conteudo_par_Vantagens_Icone"><img src="Imagens/Agilidade.png" style="margin-top:10%;"></div><b style="font-size: 100%;font-family: 'Verdana';color: red;">AGILIDADE: </b>
-                   Os robôs são desenvolvidos baseados em cálculos de economia de tempo por unidade de processamento, contúdo, as demandas automatizadas tornam-se mais ágeis do que as manuais</p></div>
+                   Os robôs são desenvolvidos baseados em cálculos de economia de tempo por unidade de processamento, conteúdo, as demandas automatizadas tornam-se mais ágeis do que as manuais</p></div>
 				</div>
 				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
                    <div id="Conteudo_par_Vantagens_Titulo"><div id="Conteudo_par_Vantagens_Icone"><img src="Imagens/Dinamismo.png" style="margin-top:10%;"></div><b style="font-size: 100%;font-family: 'Verdana';color: red;">DINAMISMO: </b>
@@ -117,14 +117,14 @@
 				</div>
 				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
                    <div id="Conteudo_par_Vantagens_Titulo"><div id="Conteudo_par_Vantagens_Icone"><img src="Imagens/Precisao.png"></div><b style="font-size: 100%;font-family: 'Verdana';color: red;">PRECISÃO: </b>
-                   Com um levantamento preciso das necessidades do fluxo, os robôs executam tarefas precisas durante toda a produção. Diferentemente de um humano, os robôs não sofrem com cansaso, estresse e outros fatores do tipo, podendo gerar do começo ao fim da execução, resultados no mesmo padrão.</p>
+                   Com um levantamento preciso das necessidades do fluxo, os robôs executam tarefas precisas durante toda a produção. Diferentemente de um humano, os robôs não sofrem com cansaço, estresse e outros fatores do tipo, podendo gerar do começo ao fim da execução, resultados no mesmo padrão.</p>
                    	</div>
 				</div>
 				
 			</div>
 			<div id="Separador_Dir" style="padding-right: 2%;">
 				<h1 style="font-family: 'Verdana';">Transformação Digital</h1>
-               <h2 style="font-family:'Lucida Sans Unicode'; text-align: justify;"> Utilize uma tecnologia acessível a todos para iniciar o avanço técnológico da sua organização.
+               <h2 style="font-family:'Lucida Sans Unicode'; text-align: justify;"> Utilize uma tecnologia acessível a todos para iniciar o avanço tecnológico da sua organização.
                 A automação começou no passado, faz parte do presente e é fundamental para o futuro!
                 Descubra como podemos contribuir com o seu progresso:</h2>
                  <a class="botao" href="Contatos.html"><b>CONTATE-NOS!!!</b></a>
@@ -138,7 +138,7 @@
 					<img src="Imagens/Transporte_y_Logistica1.png" style="margin-bottom: 5%;">
 				</div>
 				<div id="Conteudo_par_Titulo_Segmentos_inferior">
-					<h2  style="font-family: 'Verdana';">Industria</h2>
+					<h2  style="font-family: 'Verdana';">Indústria</h2>
 					<img src="Imagens/industria1.png" style="margin-bottom: 5%;">
 				</div>
 			</div>
