--- a/Por que contratar.html
+++ b/Por que contratar.html
@@ -65,7 +65,7 @@
 			<div id="Separador_Esq" style="padding-left: 1%;">
 				<h2 style="font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Utilize seu tempo em tarefas onde você é fundamental, o resto, deixa com seu amigo virtual...</h2>
 			<p style="font-size: 100%;font-family: 'Verdana'; color:black;text-align: justify;">
-			Em diveros ramos, existem inumeras tarefas massivas quem consomem muito tempo do operador
+			Em diversos ramos, existem inúmeras tarefas massivas quem consomem muito tempo do operador
 			sem agregar um real valor aos fins e a instituição, mas que não podem ser deixadas de lado.
 			A automação de processos resolve isso! Com o RPA, você pode focar esforços humanos
 			onde de fato um humano é necessário.</p>
@@ -75,8 +75,8 @@
 				<h2 style="font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Transforme massa de demandas em fluxos automatizados</h2>
 			<p style="font-size: 100%;font-family: 'Verdana'; color:black; text-align: justify;">
 			Atualmente em todos os lugares nos deparamos com milhares de dados espalhados e acumulados,
-			e inumeras situações transformam quantidades grandes de dados em algo complexo e até mesmo desorganizado,
-			a atuomação de processo também ajuda neste ponto, tendo em vista que para ocorrer uma automação,
+			e inúmeras situações transformam quantidades grandes de dados em algo complexo e até mesmo desorganizado,
+			a automação de processo também ajuda neste ponto, tendo em vista que para ocorrer uma automação,
 			primeiro é necessário ter um processo bem definido.</p>
 
 			</div>
@@ -87,9 +87,9 @@
 			<div id="Separador_Esq" style="padding-left: 1%;">
 				<h2 style="font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">A Automação não é algo complexo, pelo contrário, é a facilidade que tanto precisamos</h2>
 			<p style="font-size: 100%;font-family: 'Verdana'; color:black;text-align: justify;">
-			Para atuomatizar demandas, basta seguir um método pré definido e muito bem validado por um mercado
+			Para automatizar demandas, basta seguir um método pré-definido e muito bem validado por um mercado
 			bem experiente. A partir do momento que a vontade de automatizar uma demanda surge,
-			o resto você pode deixar com a Bulb, que em pouquissímo tempo de apresenta
+			o resto você pode deixar com a Bulb, que em pouquíssimo tempo de apresenta
 			um projeto pronto para ser implantado.</p>
 				
 			</div>
