--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -48,7 +48,7 @@
 				<div id="Quemsomoszero" style="background: linear-gradient(red, darkred);padding-left: 2%;padding-right: 2%; ">
 					<h1 style=" font-family: Garamond;font-size: 200%; color: white;">Sobre nós...</h1>
 					<p style=" font-family: Garamond;font-size: 200%; text-align: justify; color: whitesmoke;">
-					A Bulb é uma empresa do ramo de tecnologia focada em automação de processos digitais. Criada recentemente, tem propósitos claros e objetivos devido a grande experiência de seus co-fundadores no mercado.
+					A Bulb é uma empresa do ramo de tecnologia focada em automação de processos digitais. Criada recentemente, tem propósitos claros e objetivos devido a grande experiência de seus cofundadores no mercado.
 					Entregamos soluções de diversos tipos como: automações prontas, automações novas (conforme necessidade dos parceiros), robôs como serviço, entre outros.
 					<b>A Bulb não foi criada por executivos, mas por desenvolvedores!</b></p>
 
