Update Por que contratar.html
responsividade porque contratar

--- a/Por que contratar.html
+++ b/Por que contratar.html
@@ -1,18 +1,18 @@
 <html>
-	<link href="../BULB/Css/Style.css" rel="stylesheet">
+	<link href="Css/Style.css" rel="stylesheet">
 	<head>
-	  <link rel="icon" type="image/png" href="../BULB/Imagens/icon.ico">
+	  <link rel="icon" type="image/png" href="Imagens/icon.ico">
 	  <meta name="keywords" content="palavra1, frase um, palavra2, frase dois">
 	</head>
 	<div  id="header-wrap" class="fixed-header">
 		<!--<header>Teste</header>-->
 		<div class="Headerinterno">
-			<img  src="../BULB/Imagens/Logo1.png" style="height: 9vh;">
+			<img  src="Imagens/Logo1.png" style="height: 9vh;">
 			<!-- <ul class="list">
-			      <li><a href="../BULB/Index.html">Home</a></li>
-			      <li><a href="../BULB/Por que contratar.html">Beneficios do Rpa</a></li>
-			      <li><a href="../BULB/Quem Somos.html">Quem somos?</a></li>
-			      <li><a href="../BULB/Contatos.html">Contate-Nos</a></li>
+			      <li><a href="Index.html">Home</a></li>
+			      <li><a href="Por que contratar.html">Beneficios do Rpa</a></li>
+			      <li><a href="Quem Somos.html">Quem somos?</a></li>
+			      <li><a href="Contatos.html">Contate-Nos</a></li>
 			    </ul> -->
 			<!--<h1>BULB</h1>-->
 			<!--<nav class="nav-horizontal">
@@ -25,10 +25,10 @@
 		<!--<header>Teste</header>-->
 			<div class="Headerinterno">
 				<ul class="list" style="font-family: 'Verdana';">
-				      <li><a href="../BULB/Index.html"><b>Home</b></a></li>
-				      <li><a href="../BULB/Por que contratar.html"><b>Sobre o RPA<b></a></li>
-				      <li><a href="../BULB/Quem Somos.html"><b>Quem Somos?</b></a></li>
-				      <li><a href="../BULB/Contatos.html"><b>Contate-Nos</b></a></li>
+				      <li><a href="Index.html"><b>Home</b></a></li>
+				      <li><a href="Por que contratar.html"><b>Sobre o RPA<b></a></li>
+				      <li><a href="Quem Somos.html"><b>Quem Somos?</b></a></li>
+				      <li><a href="Contatos.html"><b>Contate-Nos</b></a></li>
 				    </ul>
 				
 			</div>	
@@ -47,7 +47,7 @@
 		</div>
 		<div id="Conteudo_zero">
 			<div id="Separador_Esq">
-				<img src="../BULB/Imagens/posterd1.png" style="width: 49.5vw; height: 73vh;" >
+				<img src="Imagens/posterd1.png" style="width: 49.5vw; height: 73vh;" >
 				
 			</div>
 			<div id="Separador_Dir">
@@ -100,7 +100,7 @@
 			até os dias atuais,	provavelmente você está ficando para trás. Automações estão presentes em todos os lugares,
 			e você sem muito esforço e investimento pode fazer parte deste universo com menos esforço e mais desempenho.</p>
 			</div>
-			<!--<h3>Para mais curiosidades ou dúvidas, entre em contato conosco sem nenhum compromisso clicando aqui <a href="../BULB/Contatos.html">Link</a></h3>-->
+			<!--<h3>Para mais curiosidades ou dúvidas, entre em contato conosco sem nenhum compromisso clicando aqui <a href="Contatos.html">Link</a></h3>-->
 			
 		</div>
 
