--- a/Contatos.html
+++ b/Contatos.html
@@ -1,10 +1,15 @@
 <html>
 	<link href="Css/Style.css" rel="stylesheet">
-	<link rel="shortcut icon" type="image/png" href="Imagens/icon.ico">
+	<link media="only screen and (max-device-width: 480px)" href="Css/Style - mobile.css" type="text/css" rel="stylesheet" />
+
+	<head>
+	  <link rel="icon" type="image/png" href="Imagens/icon.ico">
+	  <meta name="keywords" content="palavra1, frase um, palavra2, frase dois">
+	</head>
 	<div  id="header-wrap" class="fixed-header">
 		<!--<header>Teste</header>-->
 		<div class="Headerinterno">
-			<img  src="Imagens/Logo1.png">
+			<img  src="Imagens/Logo1.png" style="height: 9vh;">
 			<!-- <ul class="list">
 			      <li><a href="Index.html">Home</a></li>
 			      <li><a href="Por que contratar.html">Beneficios do Rpa</a></li>
@@ -18,53 +23,41 @@
 			  </div>
 			</nav> -->
 		</div>	
-		<!--<div id="header-wrap" class="Barra_Menu">
-			<a href="C:/Users/novai/Desktop/BULB/Por que contratar.html">Beneficios do Rpa &nbsp;</a> <a href="C:/Users/novai/Desktop/BULB/Quem Somos.html">Quem somos?&nbsp;</a> <a href="C:/Users/novai/Desktop/BULB/Contatos.html">Contate-Nos&nbsp;</a>
-			
-		</div>--> 
-
-		
-
-	</div>
-	<div  id="header-wrap" class="fixed-header_Menu">
+		<div  id="header-wrap" class="fixed-header_Menu">
 		<!--<header>Teste</header>-->
-		<div class="Headerinterno">
-			<ul class="list">
-			      <li><a href="Index.html">Home</a></li>
-			      <li><a href="Por que contratar.html">Sobre o RPA</a></li>
-			      <li><a href="Quem Somos.html">Quem Somos?</a></li>
-			      <li><a href="Contatos.html">Contate-Nos</a></li>
-			    </ul>
-		</div>	
-	</div>
+			<div class="Headerinterno">
+				<ul class="list" style="font-family: 'Verdana';">
+				      <li><a href="Index.html"><b>Home</b></a></li>
+				      <li><a href="Por que contratar.html"><b>Sobre o RPA<b></a></li>
+				      <li><a href="Quem Somos.html"><b>Quem Somos?</b></a></li>
+				      <li><a href="Contatos.html"><b>Contate-Nos</b></a></li>
+				    </ul>
+				
+			</div>	
+		</div>
+
+
 		<!--<div id="header-wrap" class="Barra_Menu">
 			<a href="C:/Users/novai/Desktop/BULB/Por que contratar.html">Beneficios do Rpa &nbsp;</a> <a href="C:/Users/novai/Desktop/BULB/Quem Somos.html">Quem somos?&nbsp;</a> <a href="C:/Users/novai/Desktop/BULB/Contatos.html">Contate-Nos&nbsp;</a>
 			
 		</div>--> 
-
-		
-
 	</div>
 	<body>
 		<div id="header-wrap" class="Barra_Suavização">
 			
 		</div>
 			<div id="Conteudo_contatos">
-				<h2>Passagem padrão original de Lorem Ipsum, usada desde o século XVI.</h2>
-"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+				<div id="Conteudo_Contatos_topo" >
 
-<h2>Seção 1.10.32 de "de Finibus Bonorum et Malorum", escrita por Cícero em 45 AC</h2>
-"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+				<h2 style=" font-family: 'Georgia'; font-size: 2.2vw; color: white;">Em caso de duvidas ou mais informações:</h2>
+				<!--<h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: #ccc;"><u>Telefone/WhatsApp:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: white;">(11) 99999-0000</h3> -->
+				<h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: #ccc;;"><u>Linkedin:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: white;">https://www.linkedin.com/company/bulbautomacoes</h3>
+				<h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: #ccc;"><u>Email:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: white;">contato@bulbautomacoes.com.br</h3>
 
+				</div>
 
 
 			</div>
 		
-		<div id="Conteudo_rodape">
-			<br>
-			<h2 class="rodape">Telefone: </h2><h3 class="rodape">(11)99999-9999</h3><br>
-			<h2 class="rodape">Email: </h2><h3 class="rodape">servicos@bulb.com</h3><br>
-			<h2 class="rodape">Endereço: </h2><h3 class="rodape">Rua dos Bulbos n° 543</h3><br>
-		</div>
 	</body>
 </html>
