--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 	<head>
 	  <link rel="icon" type="image/png" href="Imagens/icon.ico">
-	  <meta name="keywords" content="palavra1, frase um, palavra2, frase dois">
+	 <META NAME="KEYWORDS" CONTENT="automação, Rpa, tecnologia, automacao, robô, robôs, robos, robo, produção, producao, escritori, bot, robot, procces, automation" >
 	</head>
 	<div  id="header-wrap" class="fixed-header">
 		<!--<header>Teste</header>-->
