--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 
 	<head>
 	  <link rel="icon" type="image/png" href="Imagens/icon.ico">
-	  <META NAME="KEYWORDS" CONTENT="automação, Rpa, tecnologia, automacao, robô, robôs, robos, robo, produção, producao, escritori, bot, robot, procces, automation" >
+	  <META NAME="KEYWORDS" CONTENT="novinovaes, automação, Rpa, tecnologia, automacao, robô, robôs, robos, robo, produção, producao, escritori, bot, robot, procces, automation" >
 	</head>
 	<div  id="header-wrap" class="fixed-header">
 		<!--<header>Teste</header>-->
