--- a/Contatos.html
+++ b/Contatos.html
@@ -1,7 +1,7 @@
 <html>
 	<link href="Css/Style.css" rel="stylesheet">
 	<link media="only screen and (max-device-width: 480px)" href="Css/Style - mobile.css" type="text/css" rel="stylesheet" />
-
+	<meta charset="utf-8">
 	<head>
 	  <link rel="icon" type="image/png" href="Imagens/icon.ico">
 	  <meta name="keywords" content="palavra1, frase um, palavra2, frase dois">
@@ -23,7 +23,7 @@
 			  </div>
 			</nav> -->
 		</div>	
-		<div  id="header-wrap" class="fixed-header_Menu">
+		<span class="desktop"><div  id="header-wrap" class="fixed-header_Menu">
 		<!--<header>Teste</header>-->
 			<div class="Headerinterno">
 				<ul class="list" style="font-family: 'Verdana';">
@@ -34,15 +34,52 @@
 				    </ul>
 				
 			</div>	
-		</div>
+		</div></span>
+		
 
 
 		<!--<div id="header-wrap" class="Barra_Menu">
 			<a href="C:/Users/novai/Desktop/BULB/Por que contratar.html">Beneficios do Rpa &nbsp;</a> <a href="C:/Users/novai/Desktop/BULB/Quem Somos.html">Quem somos?&nbsp;</a> <a href="C:/Users/novai/Desktop/BULB/Contatos.html">Contate-Nos&nbsp;</a>
 			
 		</div>--> 
+<span class="mobile">
+	
+           <div id="menuToggle">
+              <input type="checkbox">
+                <span></span>
+                <span></span>
+                <span></span>
+
+            <ul id="menu">
+              <li><a class="Menu_botao" href="Index.html">Home</a></li>
+              <li><a class="Menu_botao" href="Por que contratar.html" style="margin-top: Calc( -10.5vh + -10.5vw)">Sobre o RPA</a></li>
+              <li><a class="Menu_botao" href="Quem Somos.html" style="margin-top: Calc( -16vh + -16vw)">Quem Somos?</a></li>
+              <li><a class="Menu_botao" href="Contatos.html" style="margin-top: Calc( -21.2vh + -21.2vw)">Contate-Nos</a></li>
+            </ul>
+           </div> 
+	</span>
 	</div>
+	<span class="mobile">
 	<body>
+		<div id="header-wrap" class="Barra_Suavização">
+			
+		</div>
+
+				<div id="Conteudo_Contatos_topo" >
+
+				<h2 style="margin-top: Calc( 20vh + 20vw ); font-family: 'Georgia'; font-size: Calc( 1.7vh + 1.7vw); color: white;">Em caso de duvidas ou mais informações:</h2>
+				<!-- <h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: #ccc;"><u>Telefone/WhatsApp:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: white;">(11) 99999-0000</h3> -->
+				<h3 style=" font-family: 'Georgia'; font-size: Calc( 2vh + 2vw) ; color: #ccc;;"><u>Linkedin:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: Calc( 1.3vh + 1.3vw); color: white;">https://www.linkedin.com/company/bulbautomacoes</h3>
+				<h3 style=" font-family: 'Georgia'; font-size:  Calc( 2vh + 2vw); color: #ccc;"><u>Email:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: Calc( 1.3vh + 1.3vw); color: white;">contato@bulbautomacoes.com.br</h3>
+				<img src="Imagens/Indexlogo.png" style="margin-top: Calc( 5vh + 5vw );  margin-left: Calc( 1vh + 1vw ); width: Calc( 20vh + 20vw );">
+
+				</div>
+
+		
+	</body> 
+	</span>
+	<span class="desktop">
+		<body>
 		<div id="header-wrap" class="Barra_Suavização">
 			
 		</div>
@@ -50,7 +87,7 @@
 				<div id="Conteudo_Contatos_topo" >
 
 				<h2 style=" font-family: 'Georgia'; font-size: 2.2vw; color: white;">Em caso de duvidas ou mais informações:</h2>
-				<!--<h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: #ccc;"><u>Telefone/WhatsApp:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: white;">(11) 99999-0000</h3> -->
+				<!-- <h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: #ccc;"><u>Telefone/WhatsApp:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: white;">(11) 99999-0000</h3> -->
 				<h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: #ccc;;"><u>Linkedin:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: white;">https://www.linkedin.com/company/bulbautomacoes</h3>
 				<h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: #ccc;"><u>Email:</u></h3> <h3 style=" font-family: 'Georgia'; font-size: 1.6vw; color: white;">contato@bulbautomacoes.com.br</h3>
 
@@ -59,5 +96,6 @@
 
 			</div>
 		
-	</body>
+	</body> 
+	</span>
 </html>
