--- a/Contatos.html
+++ b/Contatos.html
@@ -44,17 +44,17 @@
 		</div>--> 
 <span class="mobile">
 	
-           <div id="menuToggle">
+           <div id="menuToggle" >
               <input type="checkbox">
                 <span></span>
                 <span></span>
                 <span></span>
 
             <ul id="menu">
-              <li><a class="Menu_botao" href="Index.html">Home</a></li>
-              <li><a class="Menu_botao" href="Por que contratar.html" style="margin-top: Calc( -10.5vh + -10.5vw)">Sobre o RPA</a></li>
-              <li><a class="Menu_botao" href="Quem Somos.html" style="margin-top: Calc( -16vh + -16vw)">Quem Somos?</a></li>
-              <li><a class="Menu_botao" href="Contatos.html" style="margin-top: Calc( -21.2vh + -21.2vw)">Contate-Nos</a></li>
+              <li><a class="Menu_botao" href="Index.html" style="margin-left:Calc( 2vh + 2vw);">Home</a></li>
+              <li><a class="Menu_botao" href="Por que contratar.html" style="margin-left:Calc( 2vh + 2vw);margin-top: Calc( -10.5vh + -10.5vw)">Sobre o RPA</a></li>
+              <li><a class="Menu_botao" href="Quem Somos.html" style="margin-left:Calc( 2vh + 2vw);font-size: Calc( 4.2vh + 4.2vw);margin-top: Calc( -16vh + -16vw)">Quem Somos?</a></li>
+              <li><a class="Menu_botao" href="Contatos.html" style="margin-left:Calc( 2vh + 2vw);margin-top: Calc( -21.2vh + -21.2vw)">Contate-Nos</a></li>
             </ul>
            </div> 
 	</span>
