--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 		</span>
 
 		<span class="mobile">
-			<div id="Conteudo_zero" style=" height: Calc( 95vh + 95vw );width: Calc( 45vh + 45vw );margin-top: Calc( -27vh + -27vw ); ">
+			<div id="Conteudo_zero" style=" height: Calc( 95vh + 95vw );width: Calc( 44vh + 44vw );margin-top: Calc( -27vh + -27vw ); ">
 			<div id="Conteudo_par_Servicos1"style="background-color: transparent; width: Calc( 20vh + 20vw ); margin-left: Calc( 1.60vh + 1.60vw );padding-left: 0;height: Calc( 50vh + 50vw )">
 				<div id="Conteudo_Par_Titulo_Segmentos_Suerior" style="width: Calc( 21vh + 21vw ); margin-left: Calc( -1vh + -1vw );margin-top: Calc( 6vh + 6vw );">
 					<h2 style="font-family: 'Verdana';font-size:Calc( 2vh + 2vw );">Logística</h2>
@@ -401,7 +401,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="Conteudo_par_Titulo_Final">
+		<div id="Conteudo_par_Titulo_Final" style="width: Calc( 44vh + 44vw );">
 		</div>
 		</span>
 		<span class="desktop">
