Update Por que contratar.html

--- a/Por que contratar.html
+++ b/Por que contratar.html
@@ -145,7 +145,7 @@
 		
 		<div id="Conteudo_zero"style="height: Calc( 25vh + 25vw);">
 
-				<img src="Imagens/posterd1.png" style="width: Calc( 47vh + 47vw);margin-top: Calc( 23vh + 23vw);" >
+				<img src="Imagens/posterd1.png" style="width: Calc( 44vh + 44vw);margin-top: Calc( 23vh + 23vw);" >
 
 			<!--<h2>O que é Lorem Ipsum?</h2>
 			Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker. -->
@@ -153,7 +153,7 @@
 		<div id="Conteudo_par" style="height: Calc( 195vh + 195vw);margin-top: Calc( 13vh + 13vw); font-size:Calc( 1.5vh + 1.5vw);padding-right: Calc( 2vh + 2vw);padding-left: Calc( 1vh + 1vw); margin-bottom: 0">
 			<h2 style="font-family: 'Georgia'; color:  rgb(184, 134, 11); font-size:Calc( 2.5vh + 2.5vw); ">O que exatamente é a tecnologia RPA?</h2>
 
-			<p style="font-family: 'Verdana'; color: black; text-align: justify; font-size: ( 100vh + 100vw);"><b>
+			<p style="font-family: 'Verdana'; color: black; text-align: justify;"><b>
 			A sigla RPA, significa Robotic Process Automation, e representa a ideia de automatizar processos de trabalho de forma 100% digital, utilizando ferramentas específicas desta tecnologia.
 			O RPA é algo que está sendo cada vez mais utilizado em pequenos, médios e grandes segmentos do mercado por ser uma forma fácil e versátil de substituir tarefas massivas e repetitivas em algo totalmente autônomo.
 			Demandas de diversos tipos podem ser automatizadas com RPA!</b>
