--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 			<img  src="Imagens/Logo1.png" style="height: 9vh;">
 			<!-- <ul class="list">
 			      <li><a href="Index.html">Home</a></li>
-			      <li><a href="Por que contratar.html">Beneficios do Rpa</a></li>
+			      <li><a href="Por que contratar 1.html">Beneficios do Rpa</a></li>
 			      <li><a href="Quem Somos.html">Quem somos?</a></li>
 			      <li><a href="Contatos.html">Contate-Nos</a></li>
 			    </ul> -->
@@ -28,7 +28,7 @@
 			<div class="Headerinterno">
 				<ul class="list" style="font-family: 'Verdana';">
 				      <li><a href="Index.html"><b>Home</b></a></li>
-				      <li><a href="Por que contratar.html"><b>Sobre o RPA<b></a></li>
+				      <li><a href="Por que contratar 1.html"><b>Sobre o RPA<b></a></li>
 				      <li><a href="Quem Somos.html"><b>Quem Somos?</b></a></li>
 				      <li><a href="Contatos.html"><b>Contate-Nos</b></a></li>
 				    </ul>
@@ -39,7 +39,7 @@
 
 
 		<!--<div id="header-wrap" class="Barra_Menu">
-			<a href="C:/Users/novai/Desktop/BULB/Por que contratar.html">Beneficios do Rpa &nbsp;</a> <a href="C:/Users/novai/Desktop/BULB/Quem Somos.html">Quem somos?&nbsp;</a> <a href="C:/Users/novai/Desktop/BULB/Contatos.html">Contate-Nos&nbsp;</a>
+			<a href="C:/Users/novai/Desktop/BULB/Por que contratar 1.html">Beneficios do Rpa &nbsp;</a> <a href="C:/Users/novai/Desktop/BULB/Quem Somos.html">Quem somos?&nbsp;</a> <a href="C:/Users/novai/Desktop/BULB/Contatos.html">Contate-Nos&nbsp;</a>
 			
 		</div>--> 
 <span class="mobile">
@@ -52,7 +52,7 @@
 
             <ul id="menu">
               <li><a class="Menu_botao" href="Index.html">Home</a></li>
-              <li><a class="Menu_botao" href="Por que contratar.html" style="margin-top: Calc( -10.5vh + -10.5vw)">Sobre o RPA</a></li>
+              <li><a class="Menu_botao" href="Por que contratar 1.html" style="margin-top: Calc( -10.5vh + -10.5vw)">Sobre o RPA</a></li>
               <li><a class="Menu_botao" href="Quem Somos.html" style="margin-top: Calc( -16vh + -16vw)">Quem Somos?</a></li>
               <li><a class="Menu_botao" href="Contatos.html" style="margin-top: Calc( -21.2vh + -21.2vw)">Contate-Nos</a></li>
             </ul>
