--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<img  src="Imagens/Logo1.png" style="height: 9vh;">
 			<!-- <ul class="list">
 			      <li><a href="Index.html">Home</a></li>
-			      <li><a href="Por que contratar 1.html">Beneficios do Rpa</a></li>
+			      <li><a href="Por que contratar.html">Beneficios do Rpa</a></li>
 			      <li><a href="Quem Somos.html">Quem somos?</a></li>
 			      <li><a href="Contatos.html">Contate-Nos</a></li>
 			    </ul> -->
@@ -28,7 +28,7 @@
 			<div class="Headerinterno">
 				<ul class="list" style="font-family: 'Verdana';">
 				      <li><a href="Index.html"><b>Home</b></a></li>
-				      <li><a href="Por que contratar 1.html"><b>Sobre o RPA<b></a></li>
+				      <li><a href="Por que contratar.html"><b>Sobre o RPA<b></a></li>
 				      <li><a href="Quem Somos.html"><b>Quem Somos?</b></a></li>
 				      <li><a href="Contatos.html"><b>Contate-Nos</b></a></li>
 				    </ul>
@@ -39,7 +39,7 @@
 
 
 		<!--<div id="header-wrap" class="Barra_Menu">
-			<a href="C:/Users/novai/Desktop/BULB/Por que contratar 1.html">Beneficios do Rpa &nbsp;</a> <a href="C:/Users/novai/Desktop/BULB/Quem Somos.html">Quem somos?&nbsp;</a> <a href="C:/Users/novai/Desktop/BULB/Contatos.html">Contate-Nos&nbsp;</a>
+			<a href="C:/Users/novai/Desktop/BULB/Por que contratar.html">Beneficios do Rpa &nbsp;</a> <a href="C:/Users/novai/Desktop/BULB/Quem Somos.html">Quem somos?&nbsp;</a> <a href="C:/Users/novai/Desktop/BULB/Contatos.html">Contate-Nos&nbsp;</a>
 			
 		</div>--> 
 <span class="mobile">
@@ -52,7 +52,7 @@
 
             <ul id="menu">
               <li><a class="Menu_botao" href="Index.html">Home</a></li>
-              <li><a class="Menu_botao" href="Por que contratar 1.html" style="margin-top: Calc( -10.5vh + -10.5vw)">Sobre o RPA</a></li>
+              <li><a class="Menu_botao" href="Por que contratar.html" style="margin-top: Calc( -10.5vh + -10.5vw)">Sobre o RPA</a></li>
               <li><a class="Menu_botao" href="Quem Somos.html" style="margin-top: Calc( -16vh + -16vw)">Quem Somos?</a></li>
               <li><a class="Menu_botao" href="Contatos.html" style="margin-top: Calc( -21.2vh + -21.2vw)">Contate-Nos</a></li>
             </ul>
@@ -271,19 +271,19 @@
                    Os robôs são desenvolvidos baseados em cálculos de economia de tempo por unidade de processamento, contúdo, as demandas automatizadas tornam-se mais ágeis do que as manuais.</p>
                     </div>
 				</div>
-
+					<br><br>
 				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
                    <div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.3vh + 2.3vw );margin-top: Calc( 20vh + 20vw );padding-right: 2vw; padding-left: 2vw;text-align: justify;"><div id="Conteudo_par_Vantagens_Icone"><img src="Imagens/Massa.png" style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.3vh + 2.3vw );font-family: 'Verdana';color: red; ">PRODUÇÃO: </b>
                    Com o uso de fluxos automatizados, o expediente de trabalho não tem fim... Os robôs podem ser executados para processamento de demandas massivas, liberando os funcionários humanos para outras tarefas que agregam real valor intelectual.</p>
                    	</div>
 				</div>
-				
+					<br><br>
 				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
-                   <div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.5vh + 2.5vw );margin-top: Calc( 44vh + 44vw );padding-right: 2vw; padding-left: 2vw;text-align: justify;"><div id="Conteudo_par_Vantagens_Icone"><img src="Imagens/Dinamismo.png"style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.5vh + 2.5vw );font-family: 'Verdana';color: red; width: 30%;">DINAMISMO: </b>
+                   <div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.3vh + 2.3vw );margin-top: Calc( 44vh + 44vw );padding-right: 2vw; padding-left: 2vw;text-align: justify;"><div id="Conteudo_par_Vantagens_Icone"><img src="Imagens/Dinamismo.png"style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.5vh + 2.5vw );font-family: 'Verdana';color: red; width: 30%;">DINAMISMO: </b>
                    O dinamismo de uma automação passa pela capacidade do robô de realizar mais de uma tarefa em um fluxo cíclico, onde demandas em cadeia podem ser mapeadas para gerar uma saída a partir de várias entradas.</p>
                    	</div>
 				</div>
-				
+						<br><br>
                    <div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
                    <div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.3vh + 2.3vw );margin-top: Calc( 68vh + 68vw );padding-right: 2vw; padding-left: 2vw;text-align: justify;"><div id="Conteudo_par_Vantagens_Icone"><img src="Imagens/Precisao.png"style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.3vh + 2.3vw );font-family: 'Verdana';color: red;">PRECISÃO: </b>
                    Com um levantamento preciso das necessidades do fluxo, os robôs executam tarefas precisas durante toda a produção. Diferentemente de um humano, os robôs não sofrem com cansaço, estresse e outros fatores do tipo, podendo gerar do começo ao fim da execução, resultados no mesmo padrão.</p>
