--- a/index.html
+++ b/index.html
@@ -285,13 +285,13 @@
 				</div>
 						<br><br>
                    <div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
-                   <div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.3vh + 2.3vw );margin-top: Calc( 68vh + 68vw );padding-right: 2vw; padding-left: 2vw;text-align: justify;"><div id="Conteudo_par_Vantagens_Icone"><img src="Imagens/Precisao.png"style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.3vh + 2.3vw );font-family: 'Verdana';color: red;">PRECISÃO: </b>
+                   <div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.3vh + 2.3vw );margin-top: Calc( 68vh + 68vw );padding-right: 2vw; padding-left: 2vw;text-align: justify; height:  61vh;"><div id="Conteudo_par_Vantagens_Icone"><img src="Imagens/Precisao.png"style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.3vh + 2.3vw );font-family: 'Verdana';color: red;">PRECISÃO: </b>
                    Com um levantamento preciso das necessidades do fluxo, os robôs executam tarefas precisas durante toda a produção. Diferentemente de um humano, os robôs não sofrem com cansaço, estresse e outros fatores do tipo, podendo gerar do começo ao fim da execução, resultados no mesmo padrão.</p>
                    	</div>
 				</div>
 
                    	<div id="Separador_Dir">
-				<h1 style="font-family: 'Verdana'; margin-top: Calc( -6.0vh + -6.0vw ); font-size: Calc( 3.0vh + 3.0vw ); color:red;">Transformação Digital</h1>
+				<h1 style="font-family: 'Verdana'; margin-top: Calc( -3.0vh + -3.0vw ); font-size: Calc( 3.0vh + 3.0vw ); color:red;">Transformação Digital</h1>
                <h2 style="font-family:'Lucida Sans Unicode'; text-align: justify; font-size: Calc( 2vh + 2vw );margin-top: 0.5vh; font-style: bold;"> Utilize uma tecnologia acessível a todos para iniciar o avanço técnológico da sua organização.
                 A automação começou no passado, faz parte do presente e é fundamental para o futuro!
                 <br><u>Descubra como podemos contribuir com o seu progresso:</u></h2>
